# Agent-Trinity

./: .env.example  .gitignore  INSTALL_GUIDE.md  Modelfile  README.md  TRAINING_GUIDE.md  install.ps1  pyproject.toml  requirements.txt  start_trinity.bat  start_trinity_hidden.vbs  start_trinity_web.bat
tests/: test_filesystem.py  test_integrations.py  test_memory.py  test_orchestrator.py  test_updates.py  test_voice.py
trinity/: __init__.py  daemon.py  main.py  prompts.py
trinity/integrations/: credential_store.py  google_auth.py
trinity/llm/: router.py
trinity/memory/: conversation.py  user_profile.py  vector_store.py
trinity/orchestrator/: context.py  prompts.py  router.py
trinity/skills/: base.py
trinity/skills/applications/: launcher.py
trinity/skills/calendar/: client.py
trinity/skills/drive/: client.py
trinity/skills/email/: client.py
trinity/skills/filesystem/: deleter.py  documents.py  mover.py  reader.py  searcher.py  writer.py
trinity/skills/maps/: directions.py  location.py
trinity/ui/: confirm.py  dashboard.py  overlay.py  setup_wizard.py
trinity/updates/: checker.py
trinity/utils/: config.py  logging.py  permissions.py
trinity/voice/: audio_io.py  daemon.py  stt.py  tts.py  vad.py  wake_word.py
trinity/watchdog/: monitor.py
trinity/web/: __init__.py  app.py
trinity/web/templates/: index.html
