[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trinity-agent"
version = "1.0.0"
description = "Trinity — Voice-first AI agent for Windows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Mr. Walker"},
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "structlog>=24.1.0",
    "faster-whisper>=1.0.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "PyQt6>=6.6.0",
    "chromadb>=0.4.22",
    "aiosqlite>=0.19.0",
    "aiofiles>=23.2.0",
    "send2trash>=1.8.2",
    "google-api-python-client>=2.111.0",
    "google-auth-oauthlib>=1.2.0",
    "keyring>=24.3.0",
    "psutil>=5.9.8",
    "websockets>=12.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.scripts]
trinity = "trinity.main:cli"

[tool.setuptools.packages.find]
include = ["trinity*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
